[package]
name = "lightcontrol"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.7.0"
futures = "0.3.15"
lifx-more = { path = "../lifx-more" }
tokio = { version = "1.7.1", features = ["rt"] }
